--- a/alert_danger.html
+++ b/alert_danger.html
@@ -656,10 +656,10 @@
           </div>
 
           <!-- start Block Alert -->
-          <!-- <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <strong>Святой Гвидо ван Россум!</strong> У вас получилось отправить форму.
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Django тебе не простит!</strong> Ошибка отправки данных.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div> -->
+          </div>
           <!-- end Block Alert -->
 
         </div>
