--- a/alert_success.html
+++ b/alert_success.html
@@ -656,10 +656,10 @@
           </div>
 
           <!-- start Block Alert -->
-          <!-- <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
             <strong>Святой Гвидо ван Россум!</strong> У вас получилось отправить форму.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div> -->
+          </div>
           <!-- end Block Alert -->
 
         </div>
